--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,6 +15,22 @@ a,
   transition: 0.4s;
 }
 
+.profile-picture {
+  width: 350px;
+  height: 350px;
+  margin: auto;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.profile-picture-medium {
+  width: 150px;
+  height: 150px;
+  margin: 2rem 15px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
@@ -29,7 +45,7 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr; */
     padding: 0 2rem;
   }
 }
